# simple-photo-gallery-bulkcreation

./: .gitignore  LICENSE  MANIFEST.in  README.rst  config-example.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
example/: README.rst  config-example.ini
src/simplegallery_bulkcreation/: core.py  galleryclass.py  utils.py
src/simplegallery_bulkcreation/data/public/css/: main.css
src/simplegallery_bulkcreation/data/templates/: galleryoverview_macros.jinja  index_template.jinja
tests/: test_simplegallery_bulkcreation.py  test_utils.py
