[metadata]
name = simple-photo-gallery-bulkcreation
description = Plugin for the simple-photo-gallery to provide config base bulk creation
version = 0.1.0
author = Christoph Hille
author-email = hille721@gmail.com
license = MIT License
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/hille721/simple-photo-gallery-bulkcreation/
project-urls =
    Documentation = https://github.com/hille721/simple-photo-gallery-bulkcreation/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    simple_photo_gallery==1.5.*

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    gallery-bulkcreation = simplegallery_bulkcreation.core:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py